# TTMediaBot

./: !.txt  .dockerignore  .flake8  .gitattributes  .gitignore  .yapfignore  Dockerfile  LICENSE  README.md  TTMediaBot.po  TTMediaBot.py  TTMediaBot.sh  TTSDK_downloader.py  TeamTalkPy.7z  TeamTalkPy.7z.REMOVED.git-id  commands.py  config (default).ini  config1.json  config_default.ini  config_default.json  cool_tests.txt  core.py  development-requirements.txt  development_requirements.txt  downloader.py  ideas.txt  log.txt  mpv.py  nativecacerts.pem  nativecacerts.pem.REMOVED.git-id  null  player.py  pyproject.toml  pyrightconfig.json  requirements.txt  scripts.sh  services.py  tt.py  utils.py  youtube_vedio_play.py
.github/workflows/: build-nightly.yml
bot/: __init__.py  _sslfixer.py  app_vars.py  cache.py  commands.py  config.py  errors.py  event_handler.py  logger.py  migrator.py  player.py  sound_devices.py  streamer.py  track.py  translator.py  tt.py  utils.py  vars.py
bot/TeamTalk/: __init__.py  enums.py  event_thread.py  structs.py  task_thread.py  thread.py
bot/commands/: __init__.py  admin_commands.py  command.py  commands.py  internal_commands.py  task.py  task_processor.py  user_commands.py
bot/config/: __init__.py  models.py
bot/connectors/: __init__.py  tt_player_connector.py
bot/console/: __init__.py  thread.py
bot/migrators/: __init__.py  cache_migrator.py  config_migrator.py
bot/modules/: __init__.py  downloader.py  shortener.py  streamer.py  task_scheduler.py  uploader.py
bot/player/: __init__.py  enums.py  task_thread.py  thread.py  track.py
bot/services/: __init__.py  vk.py  yam.py  yt.py
local/ru/LC_MESSAGES/: TTMediaBot.po
piano/: Benny Martin - Young and Beautiful.mp3.REMOVED.git-id  Matt Lingus - Autumn Leaves.mp3.REMOVED.git-id  Piano Classics - Let It Be.mp3.REMOVED.git-id  Piano Classics - Theme from Love Story (Where Do I Begin).mp3.REMOVED.git-id  Piano Tribute Players - Creep.mp3.REMOVED.git-id  The Piano Guys - Can't Help Falling in Love.mp3.REMOVED.git-id
systemd/user/: TTMediaBot.service  pulseaudio.service  pulseaudio.socket
tools/: TTSDK_downloader.py  compile_locales.py  libmpv_win_downloader.py  ttsdk_downloader.py  vk_auth.py  yam_auth.py
typestubs/: mpv.pyi  patoolib.pyi  youtubesearchpython.pyi  yt_dlp.pyi
typestubs/1TeamTalkPy/: TeamTalk5.pyi
typestubs/pyshorteners/: __init__.pyi  base.pyi  exceptions.pyi
typestubs/version/: __init__.pyi
typestubs/vk_api/: __init__.py  exceptions.py
utils/: TTSDK_downloader.py  vk_auth.py
(+7 files in other folders)
