[project]
name = "TTMediaBot"
version = "1.0.0"
description = "A bot for music streaming to TeamTalk Servers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.17.0",
    "beautifulsoup4>=4.13.4",
    "httpx==0.27.0",
    "patool>=4.0.1",
    "portalocker>=3.1.1",
    "pydantic>=2.11.4",
    "pyshorteners>=1.0.1",
    "requests>=2.32.3",
    "vk-api>=11.9.9",
    "yandex-music>=2.2.0",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.4.30",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-bandit>=4.1.1",
    "flake8-black>=0.3.6",
    "flake8-commas>=4.0.0",
    "flake8-eradicate>=1.5.0",
    "flake8-import-order>=0.18.2",
    "flake8-quotes>=3.4.0",
    "vermin>=1.6.0",
]
